src/kernel/mut.output
Grammatik

    0 $accept: start $end

    1 start: /* leer */
    2      | start intervalldeklaration
    3      | start tondeklaration
    4      | start tonsystemdeklaration
    5      | start umstimmungdeklaration
    6      | start harmoniedeklaration
    7      | start logikdeklaration
    8      | start instrumentdeklaration
    9      | start error

   10 intervalldeklaration: INTERVALL intervalldekl1

   11 intervalldekl1: /* leer */
   12               | intervalldekl1 intervalldekl2_1

   13 $@1: /* leer */

   14 intervalldekl2_1: $@1 intervalldekl2

   15 intervalldekl2: IDENTIFIER '=' GLEITKOMMA_ZAHL ':' GLEITKOMMA_ZAHL
   16               | IDENTIFIER '=' GLEITKOMMA_ZAHL WURZEL GLEITKOMMA_ZAHL
   17               | IDENTIFIER '=' KOMPLEX_TON_LIST
   18               | IDENTIFIER '=' error
   19               | IDENTIFIER error

   20 tondeklaration: TON tondekl1

   21 tondekl1: /* leer */
   22         | tondekl1 tondekl2_1

   23 $@2: /* leer */

   24 tondekl2_1: $@2 tondekl2

   25 tondekl2: IDENTIFIER '=' GLEITKOMMA_ZAHL
   26         | IDENTIFIER '=' IDENTIFIER '-' KOMPLEX_TON_LIST
   27         | IDENTIFIER '=' IDENTIFIER
   28         | IDENTIFIER '=' IDENTIFIER '+' KOMPLEX_TON_LIST
   29         | IDENTIFIER '=' error

   30 KOMPLEX_TON_LIST: KOMPLEX_TON_START KOMPLEX_TON_LIST_2

   31 KOMPLEX_TON_LIST_2: /* leer */
   32                   | KOMPLEX_TON_LIST_2 KOMPLEX_TON_1

   33 KOMPLEX_TON_1: '+' IDENTIFIER
   34              | '-' IDENTIFIER
   35              | '+' GLEITKOMMA_ZAHL IDENTIFIER
   36              | '-' GLEITKOMMA_ZAHL IDENTIFIER
   37              | '+' '/' GLEITKOMMA_ZAHL IDENTIFIER
   38              | '-' '/' GLEITKOMMA_ZAHL IDENTIFIER
   39              | '+' GLEITKOMMA_ZAHL '/' GLEITKOMMA_ZAHL IDENTIFIER
   40              | '-' GLEITKOMMA_ZAHL '/' GLEITKOMMA_ZAHL IDENTIFIER

   41 KOMPLEX_TON_START: IDENTIFIER
   42                  | GLEITKOMMA_ZAHL IDENTIFIER
   43                  | '/' GLEITKOMMA_ZAHL IDENTIFIER
   44                  | GLEITKOMMA_ZAHL '/' GLEITKOMMA_ZAHL IDENTIFIER

   45 tonsystemdeklaration: TONSYSTEM tonsystemdekl1

   46 tonsystemdekl1: /* leer */
   47               | tonsystemdekl1 tonsystemdekl2_1

   48 $@3: /* leer */

   49 tonsystemdekl2_1: $@3 tonsystemdekl2

   50 $@4: /* leer */

   51 tonsystemdekl2: IDENTIFIER '=' INTEGER '[' tonliste ']' $@4 KOMPLEX_TON_LIST

   52 $@5: /* leer */

   53 tonsystemdekl2: IDENTIFIER '=' INTEGER '[' tonliste ']' $@5 '-' KOMPLEX_TON_LIST

   54 tonliste: ton_element
   55         | tonliste ',' ton_element

   56 ton_element: IDENTIFIER
   57            | /* leer */
   58            | error

   59 parameter_liste: IDENTIFIER
   60                | parameter_liste ',' IDENTIFIER
   61                | error

   62 argument_liste: argument_listenelement
   63               | argument_liste ',' argument_listenelement
   64               | error

   65 argument_listenelement: IDENTIFIER
   66                       | INTEGER
   67                       | '-' INTEGER

   68 umstimmungdeklaration: UMSTIMMUNG umstimmungs_dekl_1

   69 umstimmungs_dekl_1: /* leer */
   70                   | umstimmungs_dekl_1 umstimmungs_dekl_2

   71 $@6: /* leer */

   72 $@7: /* leer */

   73 umstimmungs_dekl_2: IDENTIFIER $@6 '=' $@7 umstimmungs_dekl_3

   74 $@8: /* leer */

   75 $@9: /* leer */

   76 umstimmungs_dekl_2: IDENTIFIER $@8 '(' parameter_liste ')' '=' $@9 umstimmungs_dekl_3

   77 umstimmungs_dekl_3: umstimmungs_dekl_taste_abs
   78                   | umstimmungs_dekl_taste_rel
   79                   | umstimmungs_dekl_breite_abs
   80                   | umstimmungs_dekl_breite_rel
   81                   | umstimmungs_dekl_tonhoehe_veraendert
   82                   | umstimmungs_dekl_wiederholung_abs
   83                   | umstimmungs_dekl_wiederholung_rel
   84                   | umstimmungs_dekl_umstimmungs_bund
   85                   | umstimmungs_dekl_umstimmungs_case
   86                   | umstimmungs_dekl_midi_out
   87                   | error

   88 umstimmungs_dekl_taste_abs: INTEGER '[' ']'
   89                           | IDENTIFIER '[' ']'

   90 umstimmungs_dekl_taste_rel: '@' '+' INTEGER '[' ']'
   91                           | '@' '+' IDENTIFIER '[' ']'
   92                           | '@' '-' INTEGER '[' ']'
   93                           | '@' '-' IDENTIFIER '[' ']'

   94 umstimmungs_dekl_breite_abs: '[' '<' '<' INTEGER '>' '>' ']'
   95                            | '[' '<' '<' IDENTIFIER '>' '>' ']'

   96 umstimmungs_dekl_breite_rel: '[' '<' '<' '@' '+' INTEGER '>' '>' ']'
   97                            | '[' '<' '<' '@' '+' IDENTIFIER '>' '>' ']'
   98                            | '[' '<' '<' '@' '-' INTEGER '>' '>' ']'
   99                            | '[' '<' '<' '@' '-' IDENTIFIER '>' '>' ']'
  100                            | '[' '<' '<' '@' '*' INTEGER '>' '>' ']'
  101                            | '[' '<' '<' '@' '*' IDENTIFIER '>' '>' ']'
  102                            | '[' '<' '<' '@' '/' INTEGER '>' '>' ']'
  103                            | '[' '<' '<' '@' '/' IDENTIFIER '>' '>' ']'

  104 $@10: /* leer */

  105 umstimmungs_dekl_tonhoehe_veraendert: '[' $@10 nonempty_umstimm_expression_list ']'

  106 nonempty_umstimm_expression_list: nonempty_umstimm_expression
  107                                 | nonempty_umstimm_expression ',' umstimm_expression_list

  108 $@11: /* leer */

  109 nonempty_umstimm_expression_list: ',' $@11 umstimm_expression_list

  110 umstimm_expression_list: umstimm_expression
  111                        | umstimm_expression_list ',' umstimm_expression

  112 umstimm_expression: /* leer */
  113                   | nonempty_umstimm_expression

  114 nonempty_umstimm_expression: IDENTIFIER
  115                            | '@'

  116 $@12: /* leer */

  117 nonempty_umstimm_expression: IDENTIFIER '+' $@12 KOMPLEX_TON_LIST

  118 $@13: /* leer */

  119 nonempty_umstimm_expression: '@' '+' $@13 KOMPLEX_TON_LIST

  120 $@14: /* leer */

  121 nonempty_umstimm_expression: IDENTIFIER '-' $@14 KOMPLEX_TON_LIST

  122 $@15: /* leer */

  123 nonempty_umstimm_expression: '@' '-' $@15 KOMPLEX_TON_LIST

  124 $@16: /* leer */

  125 umstimmungs_dekl_wiederholung_abs: '[' ']' $@16 KOMPLEX_TON_LIST

  126 $@17: /* leer */

  127 umstimmungs_dekl_wiederholung_abs: '[' ']' $@17 '-' KOMPLEX_TON_LIST

  128 $@18: /* leer */

  129 umstimmungs_dekl_wiederholung_rel: '[' ']' '@' '+' $@18 KOMPLEX_TON_LIST

  130 $@19: /* leer */

  131 umstimmungs_dekl_wiederholung_rel: '[' ']' '@' '-' $@19 KOMPLEX_TON_LIST

  132 $@20: /* leer */

  133 umstimmungs_dekl_umstimmungs_bund: '{' $@20 aktions_liste '}'

  134 aktions_liste: aktion
  135              | aktions_liste ',' aktion

  136 aktion: IDENTIFIER

  137 $@21: /* leer */

  138 aktion: IDENTIFIER '(' $@21 argument_liste ')'

  139 $@22: /* leer */

  140 aktion: MIDI_OUT '(' $@22 integersequenz ')'

  141 $@23: /* leer */

  142 umstimmungs_dekl_umstimmungs_case: INTEGER '{' $@23 umstimmungs_case_liste '}'

  143 $@24: /* leer */

  144 umstimmungs_dekl_umstimmungs_case: IDENTIFIER '{' $@24 umstimmungs_case_liste '}'

  145 umstimmungs_case_liste: umstimmungs_case_element
  146                       | umstimmungs_case_liste umstimmungs_case_element

  147 $@25: /* leer */

  148 umstimmungs_case_element: INTEGER '-' '>' $@25 aktions_liste

  149 $@26: /* leer */

  150 umstimmungs_case_element: '-' INTEGER '-' '>' $@26 aktions_liste

  151 $@27: /* leer */

  152 umstimmungs_case_element: ANSONSTEN '-' '>' $@27 aktions_liste

  153 $@28: /* leer */

  154 umstimmungs_dekl_midi_out: MIDI_OUT '(' $@28 integersequenz ')'

  155 harmoniedeklaration: HARMONIE harmonie_dekl_1

  156 harmonie_dekl_1: /* leer */
  157                | harmonie_dekl_1 harmonie_dekl_2

  158 $@29: /* leer */

  159 harmonie_dekl_2: IDENTIFIER '=' '{' $@29 tasten_liste '}' bezugs_taste
  160                | IDENTIFIER '=' error

  161 bezugs_taste: /* leer */
  162             | '.' INTEGER

  163 tasten_liste: taste
  164             | tasten_liste ',' taste

  165 taste: INTEGER
  166      | '*' INTEGER

  167 logikdeklaration: LOGIK logik_dekl_1

  168 logik_dekl_1: /* leer */

  169 $@30: /* leer */

  170 logik_dekl_1: logik_dekl_1 $@30 logik_dekl_2

  171 $@31: /* leer */

  172 logik_dekl_2: IDENTIFIER ausloeser '=' '[' $@31 anweisungs_liste ']'

  173 $@32: /* leer */

  174 logik_dekl_2: IDENTIFIER ausloeser '=' IDENTIFIER '[' $@32 anweisungs_liste ']'

  175 anweisungs_liste: /* leer */
  176                 | anweisungs_liste anweisung

  177 $@33: /* leer */

  178 anweisung: ausloeser '-' '>' '{' $@33 aktions_liste '}'

  179 $@34: /* leer */

  180 anweisung: ausloeser '-' '>' $@34 aktion

  181 harmoniebezeichner: INTEGER '~' IDENTIFIER '~' INTEGER
  182                   | IDENTIFIER '~' INTEGER
  183                   | INTEGER '~' IDENTIFIER
  184                   | IDENTIFIER

  185 ausloeser: ANSONSTEN
  186          | harmoniebezeichner
  187          | FORM harmoniebezeichner
  188          | TASTE IDENTIFIER

  189 $@35: /* leer */

  190 ausloeser: MIDI_IN '(' $@35 integersequenz ')'

  191 integersequenz: INTEGER
  192               | integersequenz ',' INTEGER
  193               | error

  194 instrumentdeklaration: INSTRUMENT instrument_dekl_1

  195 instrument_dekl_1: /* leer */
  196                  | instrument_dekl_1 instrument_dekl_2

  197 instrument_dekl_2: INTEGER '-' '>' INTEGER
  198                  | INTEGER '-' '>' INTEGER '-' INTEGER
  199                  | INTEGER '-' '>' '[' INTEGER ']'
  200                  | INTEGER '-' '>' INTEGER '[' INTEGER ']'
  201                  | INTEGER '-' '>' INTEGER '-' INTEGER '[' INTEGER ']'

  202 GLEITKOMMA_ZAHL: F_NUMBER
  203                | INTEGER


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
'(' (40) 76 138 140 154 190
')' (41) 76 138 140 154 190
'*' (42) 100 101 166
'+' (43) 28 33 35 37 39 90 91 96 97 117 119 129
',' (44) 55 60 63 107 109 111 135 164 192
'-' (45) 26 34 36 38 40 53 67 92 93 98 99 121 123 127 131 148 150 152
    178 180 197 198 199 200 201
'.' (46) 162
'/' (47) 37 38 39 40 43 44 102 103
':' (58) 15
'<' (60) 94 95 96 97 98 99 100 101 102 103
'=' (61) 15 16 17 18 25 26 27 28 29 51 53 73 76 159 160 172 174
'>' (62) 94 95 96 97 98 99 100 101 102 103 148 150 152 178 180 197
    198 199 200 201
'@' (64) 90 91 92 93 96 97 98 99 100 101 102 103 115 119 123 129 131
'[' (91) 51 53 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103
    105 125 127 129 131 172 174 199 200 201
']' (93) 51 53 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103
    105 125 127 129 131 172 174 199 200 201
'{' (123) 133 142 144 159 178
'}' (125) 133 142 144 159 178
'~' (126) 181 182 183
error (256) 9 18 19 29 58 61 64 87 160 193
IDENTIFIER (258) 15 16 17 18 19 25 26 27 28 29 33 34 35 36 37 38 39
    40 41 42 43 44 51 53 56 59 60 65 73 76 89 91 93 95 97 99 101 103
    114 117 121 136 138 144 159 160 172 174 181 182 183 184 188
F_NUMBER (259) 202
INTEGER (260) 51 53 66 67 88 90 92 94 96 98 100 102 142 148 150 162
    165 166 181 182 183 191 192 197 198 199 200 201 203
INTERVALL (261) 10
WURZEL (262) 16
TON (263) 20
TONSYSTEM (264) 45
UMSTIMMUNG (265) 68
HARMONIE (266) 155
LOGIK (267) 167
FORM (268) 187
INSTRUMENT (269) 194
TASTE (270) 188
MIDI_IN (271) 190
MIDI_OUT (272) 140 154
ANSONSTEN (273) 152 185


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (37)
    auf der linken Seite: 0
start (38)
    auf der linken Seite: 1 2 3 4 5 6 7 8 9, auf der rechten Seite:
    0 2 3 4 5 6 7 8 9
intervalldeklaration (39)
    auf der linken Seite: 10, auf der rechten Seite: 2
intervalldekl1 (40)
    auf der linken Seite: 11 12, auf der rechten Seite: 10 12
intervalldekl2_1 (41)
    auf der linken Seite: 14, auf der rechten Seite: 12
$@1 (42)
    auf der linken Seite: 13, auf der rechten Seite: 14
intervalldekl2 (43)
    auf der linken Seite: 15 16 17 18 19, auf der rechten Seite: 14
tondeklaration (44)
    auf der linken Seite: 20, auf der rechten Seite: 3
tondekl1 (45)
    auf der linken Seite: 21 22, auf der rechten Seite: 20 22
tondekl2_1 (46)
    auf der linken Seite: 24, auf der rechten Seite: 22
$@2 (47)
    auf der linken Seite: 23, auf der rechten Seite: 24
tondekl2 (48)
    auf der linken Seite: 25 26 27 28 29, auf der rechten Seite: 24
KOMPLEX_TON_LIST (49)
    auf der linken Seite: 30, auf der rechten Seite: 17 26 28 51 53
    117 119 121 123 125 127 129 131
KOMPLEX_TON_LIST_2 (50)
    auf der linken Seite: 31 32, auf der rechten Seite: 30 32
KOMPLEX_TON_1 (51)
    auf der linken Seite: 33 34 35 36 37 38 39 40, auf der rechten Seite:
    32
KOMPLEX_TON_START (52)
    auf der linken Seite: 41 42 43 44, auf der rechten Seite: 30
tonsystemdeklaration (53)
    auf der linken Seite: 45, auf der rechten Seite: 4
tonsystemdekl1 (54)
    auf der linken Seite: 46 47, auf der rechten Seite: 45 47
tonsystemdekl2_1 (55)
    auf der linken Seite: 49, auf der rechten Seite: 47
$@3 (56)
    auf der linken Seite: 48, auf der rechten Seite: 49
tonsystemdekl2 (57)
    auf der linken Seite: 51 53, auf der rechten Seite: 49
$@4 (58)
    auf der linken Seite: 50, auf der rechten Seite: 51
$@5 (59)
    auf der linken Seite: 52, auf der rechten Seite: 53
tonliste (60)
    auf der linken Seite: 54 55, auf der rechten Seite: 51 53 55
ton_element (61)
    auf der linken Seite: 56 57 58, auf der rechten Seite: 54 55
parameter_liste (62)
    auf der linken Seite: 59 60 61, auf der rechten Seite: 60 76
argument_liste (63)
    auf der linken Seite: 62 63 64, auf der rechten Seite: 63 138
argument_listenelement (64)
    auf der linken Seite: 65 66 67, auf der rechten Seite: 62 63
umstimmungdeklaration (65)
    auf der linken Seite: 68, auf der rechten Seite: 5
umstimmungs_dekl_1 (66)
    auf der linken Seite: 69 70, auf der rechten Seite: 68 70
umstimmungs_dekl_2 (67)
    auf der linken Seite: 73 76, auf der rechten Seite: 70
$@6 (68)
    auf der linken Seite: 71, auf der rechten Seite: 73
$@7 (69)
    auf der linken Seite: 72, auf der rechten Seite: 73
$@8 (70)
    auf der linken Seite: 74, auf der rechten Seite: 76
$@9 (71)
    auf der linken Seite: 75, auf der rechten Seite: 76
umstimmungs_dekl_3 (72)
    auf der linken Seite: 77 78 79 80 81 82 83 84 85 86 87, auf der rechten Seite:
    73 76
umstimmungs_dekl_taste_abs (73)
    auf der linken Seite: 88 89, auf der rechten Seite: 77
umstimmungs_dekl_taste_rel (74)
    auf der linken Seite: 90 91 92 93, auf der rechten Seite: 78
umstimmungs_dekl_breite_abs (75)
    auf der linken Seite: 94 95, auf der rechten Seite: 79
umstimmungs_dekl_breite_rel (76)
    auf der linken Seite: 96 97 98 99 100 101 102 103, auf der rechten Seite:
    80
umstimmungs_dekl_tonhoehe_veraendert (77)
    auf der linken Seite: 105, auf der rechten Seite: 81
$@10 (78)
    auf der linken Seite: 104, auf der rechten Seite: 105
nonempty_umstimm_expression_list (79)
    auf der linken Seite: 106 107 109, auf der rechten Seite: 105
$@11 (80)
    auf der linken Seite: 108, auf der rechten Seite: 109
umstimm_expression_list (81)
    auf der linken Seite: 110 111, auf der rechten Seite: 107 109 111
umstimm_expression (82)
    auf der linken Seite: 112 113, auf der rechten Seite: 110 111
nonempty_umstimm_expression (83)
    auf der linken Seite: 114 115 117 119 121 123, auf der rechten Seite:
    106 107 113
$@12 (84)
    auf der linken Seite: 116, auf der rechten Seite: 117
$@13 (85)
    auf der linken Seite: 118, auf der rechten Seite: 119
$@14 (86)
    auf der linken Seite: 120, auf der rechten Seite: 121
$@15 (87)
    auf der linken Seite: 122, auf der rechten Seite: 123
umstimmungs_dekl_wiederholung_abs (88)
    auf der linken Seite: 125 127, auf der rechten Seite: 82
$@16 (89)
    auf der linken Seite: 124, auf der rechten Seite: 125
$@17 (90)
    auf der linken Seite: 126, auf der rechten Seite: 127
umstimmungs_dekl_wiederholung_rel (91)
    auf der linken Seite: 129 131, auf der rechten Seite: 83
$@18 (92)
    auf der linken Seite: 128, auf der rechten Seite: 129
$@19 (93)
    auf der linken Seite: 130, auf der rechten Seite: 131
umstimmungs_dekl_umstimmungs_bund (94)
    auf der linken Seite: 133, auf der rechten Seite: 84
$@20 (95)
    auf der linken Seite: 132, auf der rechten Seite: 133
aktions_liste (96)
    auf der linken Seite: 134 135, auf der rechten Seite: 133 135 148
    150 152 178
aktion (97)
    auf der linken Seite: 136 138 140, auf der rechten Seite: 134 135
    180
$@21 (98)
    auf der linken Seite: 137, auf der rechten Seite: 138
$@22 (99)
    auf der linken Seite: 139, auf der rechten Seite: 140
umstimmungs_dekl_umstimmungs_case (100)
    auf der linken Seite: 142 144, auf der rechten Seite: 85
$@23 (101)
    auf der linken Seite: 141, auf der rechten Seite: 142
$@24 (102)
    auf der linken Seite: 143, auf der rechten Seite: 144
umstimmungs_case_liste (103)
    auf der linken Seite: 145 146, auf der rechten Seite: 142 144 146
umstimmungs_case_element (104)
    auf der linken Seite: 148 150 152, auf der rechten Seite: 145 146
$@25 (105)
    auf der linken Seite: 147, auf der rechten Seite: 148
$@26 (106)
    auf der linken Seite: 149, auf der rechten Seite: 150
$@27 (107)
    auf der linken Seite: 151, auf der rechten Seite: 152
umstimmungs_dekl_midi_out (108)
    auf der linken Seite: 154, auf der rechten Seite: 86
$@28 (109)
    auf der linken Seite: 153, auf der rechten Seite: 154
harmoniedeklaration (110)
    auf der linken Seite: 155, auf der rechten Seite: 6
harmonie_dekl_1 (111)
    auf der linken Seite: 156 157, auf der rechten Seite: 155 157
harmonie_dekl_2 (112)
    auf der linken Seite: 159 160, auf der rechten Seite: 157
$@29 (113)
    auf der linken Seite: 158, auf der rechten Seite: 159
bezugs_taste (114)
    auf der linken Seite: 161 162, auf der rechten Seite: 159
tasten_liste (115)
    auf der linken Seite: 163 164, auf der rechten Seite: 159 164
taste (116)
    auf der linken Seite: 165 166, auf der rechten Seite: 163 164
logikdeklaration (117)
    auf der linken Seite: 167, auf der rechten Seite: 7
logik_dekl_1 (118)
    auf der linken Seite: 168 170, auf der rechten Seite: 167 170
$@30 (119)
    auf der linken Seite: 169, auf der rechten Seite: 170
logik_dekl_2 (120)
    auf der linken Seite: 172 174, auf der rechten Seite: 170
$@31 (121)
    auf der linken Seite: 171, auf der rechten Seite: 172
$@32 (122)
    auf der linken Seite: 173, auf der rechten Seite: 174
anweisungs_liste (123)
    auf der linken Seite: 175 176, auf der rechten Seite: 172 174 176
anweisung (124)
    auf der linken Seite: 178 180, auf der rechten Seite: 176
$@33 (125)
    auf der linken Seite: 177, auf der rechten Seite: 178
$@34 (126)
    auf der linken Seite: 179, auf der rechten Seite: 180
harmoniebezeichner (127)
    auf der linken Seite: 181 182 183 184, auf der rechten Seite: 186
    187
ausloeser (128)
    auf der linken Seite: 185 186 187 188 190, auf der rechten Seite:
    172 174 178 180
$@35 (129)
    auf der linken Seite: 189, auf der rechten Seite: 190
integersequenz (130)
    auf der linken Seite: 191 192 193, auf der rechten Seite: 140 154
    190 192
instrumentdeklaration (131)
    auf der linken Seite: 194, auf der rechten Seite: 8
instrument_dekl_1 (132)
    auf der linken Seite: 195 196, auf der rechten Seite: 194 196
instrument_dekl_2 (133)
    auf der linken Seite: 197 198 199 200 201, auf der rechten Seite:
    196
GLEITKOMMA_ZAHL (134)
    auf der linken Seite: 202 203, auf der rechten Seite: 15 16 25
    35 36 37 38 39 40 42 43 44


Zustand 0

    0 $accept: . start $end
    1 start: .
    2      | . start intervalldeklaration
    3      | . start tondeklaration
    4      | . start tonsystemdeklaration
    5      | . start umstimmungdeklaration
    6      | . start harmoniedeklaration
    7      | . start logikdeklaration
    8      | . start instrumentdeklaration
    9      | . start error

    $default  reduziere mit Regel 1 (start)

    start  gehe zu Zustand 1 über


Zustand 1

    0 $accept: start . $end
    2 start: start . intervalldeklaration
    3      | start . tondeklaration
    4      | start . tonsystemdeklaration
    5      | start . umstimmungdeklaration
    6      | start . harmoniedeklaration
    7      | start . logikdeklaration
    8      | start . instrumentdeklaration
    9      | start . error
   10 intervalldeklaration: . INTERVALL intervalldekl1
   20 tondeklaration: . TON tondekl1
   45 tonsystemdeklaration: . TONSYSTEM tonsystemdekl1
   68 umstimmungdeklaration: . UMSTIMMUNG umstimmungs_dekl_1
  155 harmoniedeklaration: . HARMONIE harmonie_dekl_1
  167 logikdeklaration: . LOGIK logik_dekl_1
  194 instrumentdeklaration: . INSTRUMENT instrument_dekl_1

    $end        schiebe und gehe zu Zustand 2 über
    error       schiebe und gehe zu Zustand 3 über
    INTERVALL   schiebe und gehe zu Zustand 4 über
    TON         schiebe und gehe zu Zustand 5 über
    TONSYSTEM   schiebe und gehe zu Zustand 6 über
    UMSTIMMUNG  schiebe und gehe zu Zustand 7 über
    HARMONIE    schiebe und gehe zu Zustand 8 über
    LOGIK       schiebe und gehe zu Zustand 9 über
    INSTRUMENT  schiebe und gehe zu Zustand 10 über

    intervalldeklaration   gehe zu Zustand 11 über
    tondeklaration         gehe zu Zustand 12 über
    tonsystemdeklaration   gehe zu Zustand 13 über
    umstimmungdeklaration  gehe zu Zustand 14 über
    harmoniedeklaration    gehe zu Zustand 15 über
    logikdeklaration       gehe zu Zustand 16 über
    instrumentdeklaration  gehe zu Zustand 17 über


Zustand 2

    0 $accept: start $end .

    $default  annehmen


Zustand 3

    9 start: start error .

    $default  reduziere mit Regel 9 (start)


Zustand 4

   10 intervalldeklaration: INTERVALL . intervalldekl1
   11 intervalldekl1: .
   12               | . intervalldekl1 intervalldekl2_1

    $default  reduziere mit Regel 11 (intervalldekl1)

    intervalldekl1  gehe zu Zustand 18 über


Zustand 5

   20 tondeklaration: TON . tondekl1
   21 tondekl1: .
   22         | . tondekl1 tondekl2_1

    $default  reduziere mit Regel 21 (tondekl1)

    tondekl1  gehe zu Zustand 19 über


Zustand 6

   45 tonsystemdeklaration: TONSYSTEM . tonsystemdekl1
   46 tonsystemdekl1: .
   47               | . tonsystemdekl1 tonsystemdekl2_1

    $default  reduziere mit Regel 46 (tonsystemdekl1)

    tonsystemdekl1  gehe zu Zustand 20 über


Zustand 7

   68 umstimmungdeklaration: UMSTIMMUNG . umstimmungs_dekl_1
   69 umstimmungs_dekl_1: .
   70                   | . umstimmungs_dekl_1 umstimmungs_dekl_2

    $default  reduziere mit Regel 69 (umstimmungs_dekl_1)

    umstimmungs_dekl_1  gehe zu Zustand 21 über


Zustand 8

  155 harmoniedeklaration: HARMONIE . harmonie_dekl_1
  156 harmonie_dekl_1: .
  157                | . harmonie_dekl_1 harmonie_dekl_2

    $default  reduziere mit Regel 156 (harmonie_dekl_1)

    harmonie_dekl_1  gehe zu Zustand 22 über


Zustand 9

  167 logikdeklaration: LOGIK . logik_dekl_1
  168 logik_dekl_1: .
  170             | . logik_dekl_1 $@30 logik_dekl_2

    $default  reduziere mit Regel 168 (logik_dekl_1)

    logik_dekl_1  gehe zu Zustand 23 über


Zustand 10

  194 instrumentdeklaration: INSTRUMENT . instrument_dekl_1
  195 instrument_dekl_1: .
  196                  | . instrument_dekl_1 instrument_dekl_2

    $default  reduziere mit Regel 195 (instrument_dekl_1)

    instrument_dekl_1  gehe zu Zustand 24 über


Zustand 11

    2 start: start intervalldeklaration .

    $default  reduziere mit Regel 2 (start)


Zustand 12

    3 start: start tondeklaration .

    $default  reduziere mit Regel 3 (start)


Zustand 13

    4 start: start tonsystemdeklaration .

    $default  reduziere mit Regel 4 (start)


Zustand 14

    5 start: start umstimmungdeklaration .

    $default  reduziere mit Regel 5 (start)


Zustand 15

    6 start: start harmoniedeklaration .

    $default  reduziere mit Regel 6 (start)


Zustand 16

    7 start: start logikdeklaration .

    $default  reduziere mit Regel 7 (start)


Zustand 17

    8 start: start instrumentdeklaration .

    $default  reduziere mit Regel 8 (start)


Zustand 18

   10 intervalldeklaration: INTERVALL intervalldekl1 .
   12 intervalldekl1: intervalldekl1 . intervalldekl2_1
   13 $@1: .
   14 intervalldekl2_1: . $@1 intervalldekl2

    IDENTIFIER  reduziere mit Regel 13 ($@1)
    $default    reduziere mit Regel 10 (intervalldeklaration)

    intervalldekl2_1  gehe zu Zustand 25 über
    $@1               gehe zu Zustand 26 über


Zustand 19

   20 tondeklaration: TON tondekl1 .
   22 tondekl1: tondekl1 . tondekl2_1
   23 $@2: .
   24 tondekl2_1: . $@2 tondekl2

    IDENTIFIER  reduziere mit Regel 23 ($@2)
    $default    reduziere mit Regel 20 (tondeklaration)

    tondekl2_1  gehe zu Zustand 27 über
    $@2         gehe zu Zustand 28 über


Zustand 20

   45 tonsystemdeklaration: TONSYSTEM tonsystemdekl1 .
   47 tonsystemdekl1: tonsystemdekl1 . tonsystemdekl2_1
   48 $@3: .
   49 tonsystemdekl2_1: . $@3 tonsystemdekl2

    IDENTIFIER  reduziere mit Regel 48 ($@3)
    $default    reduziere mit Regel 45 (tonsystemdeklaration)

    tonsystemdekl2_1  gehe zu Zustand 29 über
    $@3               gehe zu Zustand 30 über


Zustand 21

   68 umstimmungdeklaration: UMSTIMMUNG umstimmungs_dekl_1 .
   70 umstimmungs_dekl_1: umstimmungs_dekl_1 . umstimmungs_dekl_2
   73 umstimmungs_dekl_2: . IDENTIFIER $@6 '=' $@7 umstimmungs_dekl_3
   76                   | . IDENTIFIER $@8 '(' parameter_liste ')' '=' $@9 umstimmungs_dekl_3

    IDENTIFIER  schiebe und gehe zu Zustand 31 über

    $default  reduziere mit Regel 68 (umstimmungdeklaration)

    umstimmungs_dekl_2  gehe zu Zustand 32 über


Zustand 22

  155 harmoniedeklaration: HARMONIE harmonie_dekl_1 .
  157 harmonie_dekl_1: harmonie_dekl_1 . harmonie_dekl_2
  159 harmonie_dekl_2: . IDENTIFIER '=' '{' $@29 tasten_liste '}' bezugs_taste
  160                | . IDENTIFIER '=' error

    IDENTIFIER  schiebe und gehe zu Zustand 33 über

    $default  reduziere mit Regel 155 (harmoniedeklaration)

    harmonie_dekl_2  gehe zu Zustand 34 über


Zustand 23

  167 logikdeklaration: LOGIK logik_dekl_1 .
  169 $@30: .
  170 logik_dekl_1: logik_dekl_1 . $@30 logik_dekl_2

    IDENTIFIER  reduziere mit Regel 169 ($@30)
    $default    reduziere mit Regel 167 (logikdeklaration)

    $@30  gehe zu Zustand 35 über


Zustand 24

  194 instrumentdeklaration: INSTRUMENT instrument_dekl_1 .
  196 instrument_dekl_1: instrument_dekl_1 . instrument_dekl_2
  197 instrument_dekl_2: . INTEGER '-' '>' INTEGER
  198                  | . INTEGER '-' '>' INTEGER '-' INTEGER
  199                  | . INTEGER '-' '>' '[' INTEGER ']'
  200                  | . INTEGER '-' '>' INTEGER '[' INTEGER ']'
  201                  | . INTEGER '-' '>' INTEGER '-' INTEGER '[' INTEGER ']'

    INTEGER  schiebe und gehe zu Zustand 36 über

    $default  reduziere mit Regel 194 (instrumentdeklaration)

    instrument_dekl_2  gehe zu Zustand 37 über


Zustand 25

   12 intervalldekl1: intervalldekl1 intervalldekl2_1 .

    $default  reduziere mit Regel 12 (intervalldekl1)


Zustand 26

   14 intervalldekl2_1: $@1 . intervalldekl2
   15 intervalldekl2: . IDENTIFIER '=' GLEITKOMMA_ZAHL ':' GLEITKOMMA_ZAHL
   16               | . IDENTIFIER '=' GLEITKOMMA_ZAHL WURZEL GLEITKOMMA_ZAHL
   17               | . IDENTIFIER '=' KOMPLEX_TON_LIST
   18               | . IDENTIFIER '=' error
   19               | . IDENTIFIER error

    IDENTIFIER  schiebe und gehe zu Zustand 38 über
